#RADAR-19: Fix answer btns and prev/next btns on mobile. Add some print styles. Fix alert position on mobile.

--- a/web/assets/scss/animations.scss
+++ b/web/assets/scss/animations.scss
@@ -14,6 +14,9 @@
     40%, 60% {
       transform: translate3d(4px, 0, 0);
     }
+    0% {
+        transform: none !important;
+    }
 }
 
 @keyframes flyin {
