--- a/web/assets/scss/bootstrap-custom.scss
+++ b/web/assets/scss/bootstrap-custom.scss
@@ -75,6 +75,13 @@ html, body {
     }
 }
 
+// Text size
+h1{
+    @include media-breakpoint-down(md){
+        font-size: 1.5rem;
+    }
+}
+
 // grey sidebar
 .grey-bg {
     background-color: $gray-200;
@@ -93,18 +100,24 @@ html, body {
 
 // Survey
 .survey {
-    padding-bottom: 10rem;
+    @include media-breakpoint-up(md) {
+        padding-bottom: 10rem;
+    }
     .question {
         animation: flyin .4s ease-out forwards;
         opacity: 0;
         filter: blur(2px);
+        .reply {
+            border-bottom: 1px solid $gray-400;
+            margin-bottom: 1rem;
+        }
     }
 }
 
 // Toggle icon on accordion
 #accordion {
     div:first-child {
-        border-bottom: 1px solid $black;
+        border-bottom: 1px solid $gray-300;
         padding-bottom: 1rem;
         margin-bottom: 1rem;
     }
@@ -136,6 +149,7 @@ html, body {
 .alert-danger {
     position: fixed;
     top: 1%;
+    left: 10px;
     z-index: 10000;
     width: calc(100% - 2rem);
     box-shadow: 0 4px 16px rgba(0,0,0,.16);
@@ -143,13 +157,16 @@ html, body {
         width: calc(66.66667% - 2rem);
     }
     animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-    transform: translate3d(0, 0, 0);
     backface-visibility: hidden;
     perspective: 1000px;
+    transform: none !important;
 }
 
 // Survey choice buttons
-.btn-group, .btn-group-vertical {
+.btn-group {
+    @include media-breakpoint-down(md) {
+        display: inline;
+    }
     &.choices {
         .btn {
             background-color: $gray-200;
@@ -176,18 +193,26 @@ html, body {
                     background-color: $black;
                 }
             }
+            @include media-breakpoint-down(md) {
+                width: 100%;
+                border-radius: 0;
+            }
         }
+    }
+    > .btn:not(:last-child) {
+        border-bottom: 0;
     }
 }
 
 // Survey navigation buttons
 .prev-next-btns {
-    position: fixed;
-    bottom: 0;
+    
     z-index: 2;
     background-color: $gray-200;
     @include media-breakpoint-up(md) {
         width: 66.66667%;
+        position: fixed;
+        bottom: 0;
     }
     [class^="col"]{
         padding-left: 0;
@@ -201,7 +226,9 @@ html, body {
         }
         font-weight: 400;
         &.survey-prev {
-            padding-left: 3rem;
+            @include media-breakpoint-up(md) {
+                padding-left: 3rem;
+            }
             background-color: $gray-200;
             &:hover {
                 background-color: darken($gray-200, 5%)
@@ -216,7 +243,9 @@ html, body {
             }
         }
         &.survey-next {
-            padding-right: 3rem;
+            @include media-breakpoint-up(md) {
+                padding-right: 3rem;
+            }
             &:after {
                 content: "\f105";
                 width: 10px;
@@ -269,5 +298,16 @@ html, body {
     img {
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
+    }
+}
+
+
+// Print 
+
+@media print {
+    .survey,
+    .survey-info
+    {
+        page-break-after: always;
     }
 }
